estrutura html e css concluida

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </button>
             </div>
         </section> -->
-        <section class="tela2">
+        <!-- <section class="tela2">
             <div class="titulo">
                 <h1>Desenvolvimento de sistemas</h1>
             </div>
@@ -74,6 +74,63 @@
                     <img src="./img/foto.jfif" alt="foto">
                     <h2>Mariana Silva Santos</h2>
                 </div>
+                
+            </div>
+        </section> -->
+        <section class="tela3">
+            <div class="perfil">
+                <img src="./img/foto.jfif" alt="foto-perfil">
+                <h1>Mariana Silva Santos</h1>
+            </div>
+            <div class="estatisticas">
+
+                    <div class="barra1">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">SOP</span>
+                    </div>
+
+                    <div class="barra2">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">IPR</span>
+                    </div>
+
+                    <div class="barra3">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">LIMA</span>
+                    </div>
+
+                    <div class="barra4">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">BD</span>
+                    </div>
+
+                    <div class="barra5">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">PBE</span>
+                    </div>
+
+                    <div class="barra6">
+                        <span class="valor">90</span>
+                        <div class="coluna">
+                            <div class="preenchimento"></div>
+                        </div>
+                        <span class="legenda">PFE</span>
+                    </div>
                 
             </div>
         </section>
