--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <main>
-        <!-- <section class="tela1">
+        <section class="tela1" id="tela1">
             <div class="container1">
                 <div class="frase">
                     <h1>Escolha um <span>curso</span> para gerenciar</h1>
@@ -32,7 +32,7 @@
             <div class="container3">
                     <button>
                         <div>
-                            <img src="./img/logoDs.png" alt="logoDs">
+                            <img src="./img/logoDs.png" alt="logoDs" id="btnDS">
                             <h1>DS</h1>
                         </div>
                     </button>
@@ -44,39 +44,18 @@
                         </div>
                     </button>
             </div>
-        </section> -->
-        <!-- <section class="tela2">
+        </section>
+        <section class="tela2" id="tela2">
             <div class="titulo">
                 <h1>Desenvolvimento de sistemas</h1>
             </div>
-            <div class="alunos">
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                <div class="card">
-                    <img src="./img/foto.jfif" alt="foto">
-                    <h2>Mariana Silva Santos</h2>
-                </div>
-                
+            <div class="alunos" id="alunos">
+                <!-- <div class="card">
+                    <img src="" alt="">
+                    <h2></h2>
+                </div> -->
             </div>
-        </section> -->
+        </section>
         <section class="tela3">
             <div class="perfil">
                 <img src="./img/foto.jfif" alt="foto-perfil">
