código do projeto concluído

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="cabecalho">
             <div class="logo"> <img src="./img/logo.png" alt="logo"></div>
-            <button class="sair"> <img src="./img/sair.png" alt="sair"></button>
+            <button class="sair"> <img src="./img/sair.png" alt="sair" id="btnSair"></button>
         </div>
     </header>
     <main>
@@ -31,16 +31,16 @@
             </div>
             <div class="container3">
                     <button>
-                        <div>
-                            <img src="./img/logoDs.png" alt="logoDs" id="btnDS">
-                            <h1>DS</h1>
+                        <div id="btnDS">
+                            <img src="./img/logoDs.png" alt="logoDs" >
+                            <!-- <h1>DS</h1> -->
                         </div>
                     </button>
     
                     <button>
-                        <div>
-                            <img src="./img/logoRedes.png" alt="logoDs">
-                            <h1>REDES</h1>
+                        <div id="btnREDES">
+                            <img src="./img/logoRedes.png" alt="logoRedes">
+                            <!-- <h1>REDES</h1> -->
                         </div>
                     </button>
             </div>
@@ -56,14 +56,15 @@
                 </div> -->
             </div>
         </section>
-        <section class="tela3">
-            <div class="perfil">
-                <img src="./img/foto.jfif" alt="foto-perfil">
-                <h1>Mariana Silva Santos</h1>
+        <section class="tela3" id="tela3">
+            <!-- <button id="btnTela3">Voltar para tela anterior</button> -->
+            <div class="perfil" id="containerPerfil">
+                <!-- <img src="./img/foto.jfif" alt="foto-perfil">
+                <h1>Mariana Silva Santos</h1> -->
             </div>
-            <div class="estatisticas">
+            <div class="estatisticas" id="containerEstatisticas">
 
-                    <div class="barra1">
+                    <!-- <div class="barra1">
                         <span class="valor">90</span>
                         <div class="coluna">
                             <div class="preenchimento"></div>
@@ -109,7 +110,7 @@
                             <div class="preenchimento"></div>
                         </div>
                         <span class="legenda">PFE</span>
-                    </div>
+                    </div> -->
                 
             </div>
         </section>
